--- a/config/database.yml
+++ b/config/database.yml
@@ -20,10 +20,13 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: db
+  user: postgres
+  password: <%= ENV['DB_PASSWORD'] %>
 
 development:
   <<: *default
-  database: OneOhOneExchange_development
+  database: oneohone_exchange_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: OneOhOneExchange_test
+  database: oneohone_exchange_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +83,5 @@ test:
 #
 production:
   <<: *default
-  database: OneOhOneExchange_production
-  username: OneOhOneExchange
-  password: <%= ENV['ONEOHONEEXCHANGE_DATABASE_PASSWORD'] %>
+  database: oneohone_exchange_production
+  username: oneohone_exchange
