--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,25 @@
-version: "3"
+version: "3.8"
 
 services:
-  postgres:
-    image: "postgres:9.5"
+  db:
+    image: "postgres:12.2"
+    environment:
+      - POSTGRES_PASSWORD=postgres
     volumes:
       - postgres:/var/lib/postgresql/data
 
   app:
-    depends_on:
-      - "postgres"
     build: .
     command: bash start.sh
     ports:
       - "3000:3000"
+    environment:
+      - DB_PASSWORD=postgres
     volumes:
       - .:/oneohoneexchange
       - gems:/gems
- 
+    depends_on:
+      - db
 
 volumes:
   postgres:
